--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
 		"svelte": "^4.0.5",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"socket.io": "^4.7.2",
+		"socket.io-client": "^4.7.2"
+	}
 }
