--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"firebase": "^10.7.1",
 		"socket.io": "^4.7.2",
 		"socket.io-client": "^4.7.2"
 	}
